test/data/valid-messages/standard-list-services.message
# Standard org.freedesktop.DBus.ListServices message

VALID_HEADER
FIELD_NAME name
TYPE STRING
STRING 'org.freedesktop.DBus.ListServices'
FIELD_NAME srvc
TYPE STRING
STRING 'org.freedesktop.DBus'
ALIGN 8
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
