test/data/invalid-messages/bad-boolean.message
## a message with an invalid boolean value

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER
FIELD_NAME name
TYPE STRING
STRING 'org.freedesktop.Foo'
ALIGN 8
END_LENGTH Header
START_LENGTH Body
TYPE BOOLEAN
BYTE 3
END_LENGTH Body
